--- a/diabetes_analysis.ipynb
+++ b/diabetes_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "07e4a850",
    "metadata": {},
    "source": [
-    "DIABETES DIOGONISTIC MODEL
+    "DIABETES DIOGONISTIC MODEL"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "e1be2bd3",
    "metadata": {},
    "source": [
-   
+    
    ]
   },
   {
