--- a/diabetes_analysis.ipynb
+++ b/diabetes_analysis.ipynb
@@ -21,13 +21,8 @@
    "id": "f7b42384",
    "metadata": {},
    "source": [
-    "The construction of diabetes dataset was explained. The data were collected from the Iraqi society, as they data were acquired \n",
-    "from the laboratory of Medical City Hospital and \n",
-    "(the Specializes Center for Endocrinology and Diabetes-Al-Kindy Teaching Hospital). \n",
-    "Patients' files were taken and data extracted from them and \n",
-    "entered in to the database to construct the diabetes dataset. The data consist of medical information, laboratory analysis. \n",
+    "The construction of diabetes dataset explained.\n",
     "The data attribute are:\n",
-    "The data consist of medical information, laboratory analysis… etc. The data that have been entered initially into the system \n",
     "are: No. of Patient, Sugar Level Blood, Age, Gender, Creatinine ratio(Cr), Body Mass Index (BMI), Urea, Cholesterol (Chol), \n",
     "Fasting lipid profile, including total, LDL, VLDL, Triglycerides(TG) and HDL Cholesterol , HBA1C, Class (the patient's \n",
     "diabetes disease class may be Diabetic, Non-Diabetic, or Predict-Diabetic)."
