--- a/diabetes_analysis.ipynb
+++ b/diabetes_analysis.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "The construction of diabetes dataset explained.\n",
-    "The data attribute are:\n",
+    "The data attribute:\n",
     "are: No. of Patient, Sugar Level Blood, Age, Gender, Creatinine ratio(Cr), Body Mass Index (BMI), Urea, Cholesterol (Chol), \n",
     "Fasting lipid profile, including total, LDL, VLDL, Triglycerides(TG) and HDL Cholesterol , HBA1C, Class (the patient's \n",
     "diabetes disease class may be Diabetic, Non-Diabetic, or Predict-Diabetic)."
