--- a/diabetes_analysis.ipynb
+++ b/diabetes_analysis.ipynb
@@ -21,7 +21,7 @@
    "id": "f7b42384",
    "metadata": {},
    "source": [
-    "The data attribute:\n",
+    "The data attributes\n",
     "are: No. of Patient, Sugar Level Blood, Age, Gender, Creatinine ratio(Cr), Body Mass Index (BMI), Urea, Cholesterol (Chol), \n",
     "Fasting lipid profile, including total, LDL, VLDL, Triglycerides(TG) and HDL Cholesterol , HBA1C, Class (the patient's \n",
     "diabetes disease class may be Diabetic, Non-Diabetic, or Predict-Diabetic)."
